# server/api/controllers/balance/router.js
@@ -5,4 +5,5 @@ export default express
   .Router()
   .get('/:id', controller.getBalance)
   .post('/', controller.move)
-  .post('/user', controller.addUser);
+  .post('/user', controller.addUser)
+  .post('/saveUser', controller.saveUser);
